--- a/core/composer.json
+++ b/core/composer.json
@@ -49,12 +49,12 @@
         "league/flysystem": "1.0.*",
         "league/flysystem-dropbox": "1.0.*",
         "hubzero/framework": "dev-master",
-        "solarium/solarium": "3.5.1",
         "hubzero/flysystem-github": "dev-develop",
         "nao-pon/flysystem-google-drive": "~1.1",
         "php-amqplib/php-amqplib": "2.5.*",
         "league/flysystem-aws-s3-v2": "^1.0",
-        "simplepie/simplepie": "1.5"
+        "simplepie/simplepie": "1.5",
+	"solarium/solarium" : "3.8.1"
     },
     "require-dev": {
         "mockery/mockery": "dev-master"
