--- a/core/composer.json
+++ b/core/composer.json
@@ -53,7 +53,8 @@
         "hubzero/flysystem-github": "dev-develop",
         "nao-pon/flysystem-google-drive": "~1.1",
         "php-amqplib/php-amqplib": "2.5.*",
-        "league/flysystem-aws-s3-v2": "^1.0"
+        "league/flysystem-aws-s3-v2": "^1.0",
+        "simplepie/simplepie": "1.5"
     },
     "require-dev": {
         "mockery/mockery": "dev-master"
