Changed default super template to sidebar branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "app/templates/qubes/super"]
 	path = app/templates/qubes/super
 	url = https://github.com/qubeshub/supertemplates
+	branch = sidebar
