[feature] Add CILogon Authentication Plugin Users must register at http://cilogon.org/oauth2/register Both of the following callback URLs should be included when registering, with <hostname> replaced with the actual HUB address. https://<hostname>/index.php?option=com_users&task=user.link&authenticator=cilogon https://<hostname>/index.php?option=com_users&task=user.login&authenticator=cilogon
The client id and client secret must be added to the
Authenticator - CILogon plugin on the backend

refs: https://mygeohub.org/support/ticket/1217

--- a/core/composer.json
+++ b/core/composer.json
@@ -54,7 +54,8 @@
         "php-amqplib/php-amqplib": "2.5.*",
         "league/flysystem-aws-s3-v2": "^1.0",
         "simplepie/simplepie": "1.5",
-	"solarium/solarium" : "3.8.1"
+	"solarium/solarium" : "3.8.1",
+        "cilogon/oauth2-cilogon": "^1.1"
     },
     "require-dev": {
         "mockery/mockery": "dev-master"
