--- a/core/composer.json
+++ b/core/composer.json
@@ -47,7 +47,6 @@
         "pear/net_dns2": "1.4.*",
         "hubzero/orcid-php": "0.*",
         "league/flysystem": "1.0.*",
-        "league/flysystem-dropbox": "1.0.*",
         "hubzero/framework": "dev-master",
         "hubzero/flysystem-github": "dev-develop",
         "nao-pon/flysystem-google-drive": "~1.1",
@@ -55,7 +54,9 @@
         "league/flysystem-aws-s3-v2": "^1.0",
         "simplepie/simplepie": "1.5",
 	"solarium/solarium" : "3.8.1",
-        "cilogon/oauth2-cilogon": "^1.1"
+        "cilogon/oauth2-cilogon": "^1.1",
+        "srmklive/flysystem-dropbox-v2": "^1.0",
+        "stevenmaguire/oauth2-dropbox": "^2.0.0"
     },
     "require-dev": {
         "mockery/mockery": "dev-master"
