[com_partners] Squashed commit of the following...
commit d9293bb27521925cb280d6425f71d22719229123
Author: M. Drew LaMar <mdlama@wm.edu>
Date:   Fri Jun 29 14:19:42 2018 -0400

    [refactor] Added install directory just in case.

commit abe413710e2914ee53a34356537f59dacab0557f
Author: M. Drew LaMar <mdlama@wm.edu>
Date:   Fri Jun 1 14:34:39 2018 -0400

    [style] Testing package management

...

--- a/app/components/com_partners/composer.json
+++ b/app/components/com_partners/composer.json
@@ -1,5 +1,8 @@
 {
 	"name": "qubeshub/com_partners",
 	"description": "Partner component for QUBES",
-	"type": "hubzero-component"
+	"type": "hubzero-component",
+	"extra": {
+	    "install-directory": "/components/com_partners"
+	}
 }
