--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install: composer self-update
 install:
 - cd core
 - composer install --prefer-dist --no-interaction
-- composer require squizlabs/php_codesniffer:2.*
+- composer require --prefer-dist squizlabs/php_codesniffer:2.*
 - mkdir -p ~/build
 - git clone --branch hubzero-cms-2.1 --depth=1 https://github.com/hubzero/standards ~/build/standards
 - cd ../ && FILES=$((git log --pretty=format\:'' --name-only --since="yesterday"; git log --diff-filter=D --pretty=format\:'' --name-only --since="yesterday") | sort | uniq -u | tr '\r\n' ' ')
