--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: php
-dist: trusty
 php:
 - 5.6
 - 7.0
@@ -10,14 +9,11 @@ git:
 cache:
   directories:
   - $HOME/.composer/cache/files
-before_install: composer self-update
-install:
-- cd core
-- composer install --prefer-dist --no-interaction
-- composer require --prefer-dist squizlabs/php_codesniffer:2.*
-- mkdir -p ~/build
-- git clone --branch hubzero-cms-2.1 --depth=1 https://github.com/hubzero/standards ~/build/standards
-- cd ../ && FILES=$((git log --pretty=format\:'' --name-only --since="yesterday"; git log --diff-filter=D --pretty=format\:'' --name-only --since="yesterday") | sort | uniq -u | tr '\r\n' ' ')
+before_script:
+  - composer require squizlabs/php_codesniffer:2.*
+  - mkdir -p ~/build
+  - git clone --branch hubzero-cms-2.1 --depth=1 https://github.com/hubzero/standards ~/build/standards
+  - cd ../ && FILES=$((git log --pretty=format\:'' --name-only --since="yesterday"; git log --diff-filter=D --pretty=format\:'' --name-only --since="yesterday") | sort | uniq -u | tr '\r\n' ' ')
 script:
 - core/vendor/bin/phpcs -np --standard=~/build/standards/Php/ruleset.xml --ignore=*/test/*,*/assets/*,*/views/*,*/tmpl/*,/core/components/com_dataviewer/*,/core/libraries/*
   $FILES
