--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,11 @@ php:
 - 7.0
 git:
   depth: 10
-cache:
-  directories:
-  - $HOME/.composer/cache/files
 before_script:
   - composer require squizlabs/php_codesniffer:2.*
   - mkdir -p ~/build
   - git clone --branch hubzero-cms-2.1 --depth=1 https://github.com/hubzero/standards ~/build/standards
   - FILES=$((git log --pretty=format\:'' --name-only --since="yesterday"; git log --diff-filter=D --pretty=format\:'' --name-only --since="yesterday") | sort | uniq -u | tr '\r\n' ' ')
 script:
-- phpcs -np --standard=~/build/standards/Php/ruleset.xml --ignore=*/test/*,*/assets/*,*/views/*,*/tmpl/*,/core/components/com_dataviewer/*,/core/libraries/*
+- vendor/squizlabs/php_codesniffer/bin/phpcs -np --standard=~/build/standards/Php/ruleset.xml --ignore=*/test/*,*/assets/*,*/views/*,*/tmpl/*,/core/components/com_dataviewer/*,/core/libraries/*
   $FILES
