--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ php:
 - 7.2
 git:
   depth: 10
+cache:
+  directories:
+  - $HOME/.composer
 before_script:
   - composer require squizlabs/php_codesniffer:2.*
   - mkdir -p ~/build
