--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ before_script:
   - mkdir -p ~/build
   - git clone --branch hubzero-cms-2.1 --depth=1 https://github.com/hubzero/standards ~/build/standards
   - FILES=$((git log --pretty=format\:'' --name-only --since="yesterday"; git log --diff-filter=D --pretty=format\:'' --name-only --since="yesterday") | sort | uniq -u | tr '\r\n' ' ')
+  - echo $FILES
 script:
 - vendor/squizlabs/php_codesniffer/scripts/phpcs -np --standard=~/build/standards/Php/ruleset.xml $FILES
