[tpl_bmc] Squashed commit of the following...
commit 92531939634a6c09ce2f2be2b2331d1fe0b30235
Author: M. Drew LaMar <mdlama@wm.edu>
Date:   Tue Aug 28 10:53:31 2018 -0400

    [tpl_bmc] Squashed commit of the following...

    commit cfdb082829378de98c8f44338d4c948d60e8c3ac
    Author: M. Drew LaMar <mdlama@wm.edu>
    Date:   Tue Aug 28 10:44:02 2018 -0400

        Removed unnecessary super directory

    commit 4ab9f6add00caaa59df19870607c7a7b62883cef
    Merge: 394763812b 37e27da592
    Author: M. Drew LaMar <mdlama@wm.edu>
    Date:   Sun Aug 26 11:21:23 2018 -0400

        Merge pull request #8 from trisketz/sidebar

        Sidebar

    commit 37e27da59220363e3e37d742cdd9ff8a7d8b9210
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Fri Aug 24 14:57:22 2018 -0500

        Fix sidebar jumping on scroll.

    commit fca6b6744dd091d1937201dee47a6452ccbcba5e
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Fri Aug 24 11:47:34 2018 -0500

        Forgot I had commented out sidebar.js when working on responsiveness. Commenting back in.

    commit 394763812bcfb0799d639d2fca179ea533c5b2d2
    Merge: 35bec4c70a 43bd6fce2b
    Author: M. Drew LaMar <mdlama@wm.edu>
    Date:   Tue Aug 21 10:28:10 2018 -0400

        Merge pull request #6 from trisketz/sidebar

        Sidebar responsiveness

    commit 43bd6fce2b2f287f759749ce47b1cf294715ceb6
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Wed Aug 15 20:43:14 2018 -0500

        Remove group name and only show icon on sticky header on mobile.

    commit c1d7d2e5c0de949a19a216580981f1f191d8f240
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Wed Aug 15 15:27:39 2018 -0500

        Fix conflict with sidebar responsiveness and sidebar scrolling classes.

    commit 4a37cba84d0ffdab67211b178df09e5ec49054fa
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Tue Aug 14 15:03:27 2018 -0500

        Add sidebar responsiveness.

    commit 35759943c99ade225cca2d7031577de629047c17
    Author: Je

--- a/app/templates/bmc/composer.json
+++ b/app/templates/bmc/composer.json
@@ -1,5 +1,8 @@
 {
 	"name": "qubeshub/tpl_bmc",
 	"description": "QUBES template (2018)",
-	"type": "hubzero-template"
+	"type": "hubzero-template",
+	"extra": {
+	    "install-directory": "/templates/bmc"
+	}
 }
